tests/NormalTests/paczka1/fuzzy1/38956852.err
Error in line 20: HQBN A386 -1,9
Error in line 7: HQBN A386 1,1
Error in line 25: qoTTCzwWxwa A428 76,9
Error in line 23: HQBN A333 16,3
Error in line 33: tlmQeQE0U A428 30,1
Error in line 40: BlfOSX(D7i A333 104,7
